styles.css
html, body {
  margin: 0;
  padding: 0;
  height: 100dvh;
  font-family: Arial, sans-serif;
}

a {
  text-decoration: underline;
  color: inherit;
}

.container {
  display: flex;
  flex-direction: column;
  width: 100dvw;
  height: 100dvh;
}

.content {
  margin: 0;
  padding: 0;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  text-align: center;
  flex-grow: 1;
  background-image: url('/static/background-large.jpg');
  background-position: right center;
  background-size: cover;
  background-repeat: no-repeat;
}

.page-header {
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.page-title {
  margin: 0;
  padding: 0;
  font-family: 'Barrio', system-ui, sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 6em;
}

.main-content {
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  flex-grow: 1;
}

.section {
  margin: 20px;
  padding: 20px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-color: rgba(255, 255, 255, 0.8);
}

.section h1 {
  margin: 0;
  padding: 0;
  font-size: 2em;
}

.section h2 {
  margin: 10px 0;
  padding: 0;
  font-size: 1.5em;
}

.footer {
  padding: 20px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  color: #fff;
  background-color: #333;
  text-align: center;
  font-size: 0.8em;
}

.home-links {
  list-style-type: none;
  padding: 0;
  margin: 0;
}

.home-link {
  margin: 10px 0;
}

.home-link a {
  text-decoration: none;
  font-family: 'Barrio', system-ui, sans-serif;
  font-size: 1.2em;
}
.home-link a:hover {
  font-weight: bold;
}

.error-title {
  margin: 0;
  padding: 0;
}

@media (max-width: 1920px) {
  .content {
    background-image: url('/static/background-desktop.jpg');
  }
}

@media (max-width: 768px) or (max-height: 768px) {
  .content {
    background-image: url('/static/background-mobile.jpg');
  }

  .page-title {
    font-size: 3em;
  }

  .footer {
    padding: 10px;
  }
}

@media (orientation: portrait) {
  .content {
    background-position: 80% center;
  }
}

